--- a/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
@@ -8,9 +8,9 @@
     <h2 class="title">
         کیف پول
     </h2>
-    <button class="btn button">
+    <a href="/User/Wallet/Charge"  class="btn button">
         شارژ
-    </button>
+    </a>
     <div class="balance">
         <label class="bal">36,000,000</label>
         <span class="t">تومان</span>
