--- a/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
@@ -18,7 +18,7 @@
         </div>
 
         <div class="uk-margin-medium-top">
-            <div class="btn btn-primary">شارژ</div>
+            <button class="btn btn-primary">شارژ</button>
         </div>
     </form>
 </div>
