--- a/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
@@ -15,7 +15,7 @@
                 @foreach (var j in item.TblProduct)
                 {
                     <li>
-                        <partial name="_ProductBlock" model="item" />
+                        <partial name="_ProductBlock" model="j" />
                     </li>
                 }
             </ul>
@@ -27,67 +27,3 @@
 
     }
 }
-
-<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
-    <div class="title">
-        <a href="#" class="dot-container">
-            <img src="~/st/v/dot.svg" alt="" class="dot" />
-            <h3>سامسونگ</h3>
-        </a>
-    </div>
-
-    <ul class="uk-slider-items">
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-    </ul>
-
-    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-</div>
-
-<div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
-
-    <div class="title">
-        <a href="#" class="dot-container">
-            <img src="~/st/v/dot.svg" alt="" class="dot" />
-            <h3>شیائومی</h3>
-        </a>
-    </div>
-
-    <ul class="uk-slider-items">
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-        <li>
-            <partial name="_ProductBlock" />
-        </li>
-    </ul>
-
-    <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-</div>
