--- a/GhasreMobile/Views/Shared/_CommentBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_CommentBlock.cshtml
@@ -1,10 +1,11 @@
-﻿<div class="comment">
+﻿@model TblComment
+<div class="comment">
     <div class="head">
-        <h5>مهتاب دادسرشت</h5>
-        <label class="date">3 روز پیش</label>
+        <h5>@Model.Client.Name</h5>
+        <label class="date">@Model.DateCreated.Value.DateToShamsi() </label>
     </div>
     <p>
-        از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
+        @Model.Body
     </p>
     <div class="actions">
         @*<a href="" uk-tooltip="لایک کردن" class="gap-l" uk-icon="heart-outline"></a>*@
