--- a/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Property/Index.cshtml
@@ -15,7 +15,7 @@
                             <input id="PropertyInput" class="form-control" placeholder="مثال : حافظه داخلی">
                         </div>
                         <div class="form-group col-md-2">
-                            <a onclick="CreateNewProperty()" class="btn btn-success btn-sm"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
+                            <a onclick="CreateNewProperty()" class="btn btn-success btn-sm text-white"> افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></a>
                             <span class="text-danger" id="CreatePropertyErorr"></span>
                         </div>
                     </div>
