--- a/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Order/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblOrder>
+
+@using GhasreMobile.Utilities
+
 @{
     ViewData["Title"] = "سفارشات";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -41,40 +44,75 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1512</td>
-                                <td>تاریخ</td>
-                                <td>
-                                    <span class="text-success">تکمیل شده</span>
-                                    <span class="text-info">درحال ارسال</span>
-                                    <span class="text-warning">در حال سفارش</span>
-                                </td>
-                                <td>
-                                    <span>پرداخت آنلاین</span>
-                                    <span>پرداخت درب منزل یا در محل فروشگاه</span>
-                                    <span>کارت به کارت و ارسال رسید پرداخت</span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                        <a data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                                <td>
-                                    <span data-placement="top" data-toggle="tooltip" title="" data-original-title="لغو سفارش">
-                                        <a id="Information" class="text-danger" uk-icon="close-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
-                            
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.OrdeId</td>
+                                    <td>@item.DateSubmited.AllToShamsi()</td>
+                                    <td>
+                                        @if (item.Status == 0)
+                                        {
+                                            <span class="text-warning">در حال آماده سازی</span>
+                                        }
+                                        else if (item.Status == 1)
+                                        {
+                                            <span class="text-info">ارسال شده</span>
+                                        }
+                                        else if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        @if (item.PaymentStatus == 0)
+                                        {
+                                            <span>پرداخت آنلاین</span>
+
+                                        }
+                                        else if (item.PaymentStatus == 1)
+                                        {
+                                            <span>پرداخت درب منزل یا در محل فروشگاه</span>
+
+                                        }
+                                        else if (item.PaymentStatus == 2)
+                                        {
+                                            <span>کارت به کارت و ارسال رسید پرداخت</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" data-original-title="جزئیات">
+                                            <a onclick="OrderInfo(@item.OrdeId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        @if (item.Status == 0)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ارسال سفارش">
+                                                <a onclick="SendOrder(@item.OrdeId)" class="text-info" uk-icon="send-outline"></a>
+                                            </span>
+                                        }
+                                        else if (item.Status == 1)
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="تکمیل سفارش">
+                                                <a onclick="DoneOrder(@item.OrdeId)" class="text-success" uk-icon="checkmark-done-outline"></a>
+                                            </span>
+                                        }
+                                        else if (item.Status == 2)
+                                        {
+                                            <span class="text-success">تکمیل شده</span>
+                                        }
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
             </div>
 
             <div class="card-footer bg-white">
-                @*<nav aria-label="Page navigation example">
-                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
-                </nav>*@
+                <nav aria-label="Page navigation example">
+                        @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
+                    </nav>
             </div>
         </div>
     </div>
@@ -82,11 +120,27 @@
 
 @section Script{
     <script>
-        $("#Information").click(function () {
+
+        function OrderInfo (id) {
             $(".modal-content").html("");
-            $.get("/Admin/Order/OrderInfo", function (result) {
+            $.get("/Admin/Order/Info/" + id, function (result) {
                 $(".modal-content").html(result);
             });
-        });
+        }
+
+        function SendOrder(id) {
+            $(".modal-content").html("");
+            $.get("/Admin/Order/SendOrder/" + id, function () {
+                window.location.reload();
+            });
+        }
+
+        function DoneOrder(id) {
+            $(".modal-content").html("");
+            $.get("/Admin/Order/DoneOrder/" + id, function () {
+                window.location.reload();
+            });
+        }
+
     </script>
 }
