--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -80,7 +80,7 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label>درصد تخفیف</label>
-                        <input asp-for="PriceAfterDiscount" maxlength="2" class="form-control form-control-sm" placeholder="مثال : 10">
+                        <input asp-for="PriceAfterDiscount" class="form-control form-control-sm" placeholder="مثال : 10">
                         <span asp-validation-for="PriceAfterDiscount" class="text-danger"></span>
                     </div>
                 </div>
@@ -134,20 +134,20 @@
                     <span id="TblColor" asp-validation-for="TblColor" class="text-danger"></span>
                 </div>
                 <aside id="ColorPanel">
-                        @foreach (var item in Model.TblColor)
-                        {
-                            <div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ : @item.Name</label><div class="uk-border-rounded mr-2 color-box" style="background:@item.ColorCode;"></div><label class='mr-2'>@item.Count عدد</label><input type="hidden" name="Colors" value="@item.ColorCode" /><input type="hidden" name="ColorsCounts" value="@item.Count" /><input type="hidden" name="ColorName" value="@item.Name" /><span class='text-danger'>&nbsp;(x)</span></div>
-                        }
+                    @foreach (var item in Model.TblColor)
+                    {
+                        <div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ : @item.Name</label><div class="uk-border-rounded mr-2 color-box" style="background:@item.ColorCode;"></div><label class='mr-2'>@item.Count عدد</label><input type="hidden" name="Colors" value="@item.ColorCode" /><input type="hidden" name="ColorsCounts" value="@item.Count" /><input type="hidden" name="ColorName" value="@item.Name" /><span class='text-danger'>&nbsp;(x)</span></div>
+                    }
                 </aside>
                 <hr />
                 <div class="form-row mt-3">
                     <div class="form-group col-md-5">
                         <label class="uk-text-bold">افزودن ویژگی</label>
-                        <input id="NewProperyName" class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
-                        <span id="CreateNewProperyErorr" class="text-danger"></span>
+                        <input id="NewPropertyName" class="form-control form-control-sm" placeholder="مثال : حافظه داخلی">
+                        <span id="CreateNewPropertyErorr" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2 mt-md-4 pt-2">
-                        <a onclick="CreatePropery()" class="btn btn-info btn-sm text-white">افزودن</a>
+                        <a onclick="CreateProperty()" class="btn btn-info btn-sm text-white">افزودن</a>
                     </div>
                 </div>
                 <aside id="PropertyPanel">
@@ -232,11 +232,11 @@
         function SetNewInputGallery() {
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                   <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                   <label class="custom-file-label" data-browse="انتخاب">
-                                        انتخاب فایل
-                                   </label>
-                                 </div>`
+                                       <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                       <label class="custom-file-label" data-browse="انتخاب">
+                                            انتخاب فایل
+                                       </label>
+                                     </div>`
             );
 
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
@@ -302,21 +302,21 @@
             par.parentElement.removeChild(par)
         }
 
-        function CreatePropery() {
-            var Name = $("#NewProperyName").val();
+        function CreateProperty() {
+            var Name = $("#NewPropertyName").val();
             if (Name == "" || Name == null) {
-                $("#CreateNewProperyErorr").html("لطفا نام ویژگی را وارد کنید");
+                $("#CreateNewPropertyErorr").html("لطفا نام ویژگی را وارد کنید");
             } else {
                 $.post("/Admin/Property/Create?Name=" + Name, function (result) {
                     if (result == "true") {
-                        $("#CreateNewProperyErorr").html("");
+                        $("#CreateNewPropertyErorr").html("");
                         $("#PropertyPanel").html("");
-                        $("#NewProperyName").val("");
-                        $.get("/Admin/Product/ProperyList", function (result) {
+                        $("#NewPropertyName").val("");
+                        $.get("/Admin/Product/PropertyList", function (result) {
                             $("#PropertyPanel").html(result);
                         });
                     } else {
-                        $("#CreateNewProperyErorr").html(result);
+                        $("#CreateNewPropertyErorr").html(result);
                     }
                 });
             }
